--- a/version3mspayload-brokerage.html
+++ b/version3mspayload-brokerage.html
@@ -111,7 +111,7 @@
         <p>Records indicate that you were recently compromised from our in-house phishing training. But do not worry! This training will help you find ways to protect both your own personal information and Western Express itself!</p>
     </div>
     <div class="additional-image">
-        <img src="https://i.imgur.com/9jWpDGV.png" alt="Additional Training Image" width="650">
+        <img src="https://i.imgur.com/mgZOoJq.png" alt="Phishing Email Example" width="650">
     </div>
     <div class="additional-content">
         <h3>How to Determine if an Email or Website is a Phishing Attempt</h3>
@@ -122,7 +122,7 @@
                     <div class="example">Example: An email claims to be from PayPal, but the sender's address is "support@paypa1.com" (note the '1' instead of 'l').</div>
                 </div>
                 <div class="li-image">
-                    <img src="bp1.png" alt="Example Image 1" width="600">
+                    <img src="https://i.imgur.com/6fh8hUC.png" alt="Example Image 1" width="600">
                 </div>
             </li>
             <li>
@@ -131,7 +131,7 @@
                     <div class="example">Example: "Dear Customer, your account has been compromised" instead of "Dear John Smith, your account has been compromised".</div>
                 </div>
                 <div class="li-image">
-                    <img src="bp2.png" alt="Example Image 2" width="400">
+                    <img src="https://i.imgur.com/nrP7d0P.png" alt="Example Image 2" width="400">
                 </div>
             </li>
             <li>
@@ -140,7 +140,7 @@
                     <div class="example">Example: "Your account will be suspended within 24 hours if you do not verify your information immediately."</div>
                 </div>
                 <div class="li-image">
-                    <img src="bp3.png" alt="Example Image 3" width="500">
+                    <img src="https://i.imgur.com/zWPxTy9.png" alt="Example Image 3" width="500">
                 </div>
             </li>
             <li>
@@ -149,7 +149,7 @@
                     <div class="example">Example: A link appears as "www.bankofamerica.com" but when you hover over it, it shows "www.bankofamerrica.com".</div>
                 </div>
                 <div class="li-image">
-                    <img src="bp4.png" alt="Example Image 4" width="350">
+                    <img src="https://i.imgur.com/IJn3av5.png" alt="Example Image 4" width="350">
                 </div>
             </li>
             <li>
@@ -158,7 +158,7 @@
                     <div class="example">Example: "Dear user, your acount has been temporaly locked. Please click here to unlock."</div>
                 </div>
                 <div class="li-image">
-                    <img src="bp5.png" alt="Example Image 5" width="300">
+                    <img src="https://i.imgur.com/QhtHHYB.png" alt="Example Image 5" width="300">
                 </div>
             </li>
             <li>
@@ -167,7 +167,7 @@
                     <div class="example">Example: An email from a supposed friend includes an unexpected attachment labeled "Invoice" or asks for your Social Security number.</div>
                 </div>
                 <div class="li-image">
-                    <img src="bp6.png" alt="Example Image 6" width="400">
+                    <img src="https://i.imgur.com/KvmGCgk.png" alt="Example Image 6" width="400">
                 </div>
             </li>
             <li>
@@ -176,16 +176,7 @@
                     <div class="example">Example: A legitimate site should display "https://" at the beginning of the URL, indicating a secure connection. Phishing sites often lack this.</div>
                 </div>
                 <div class="li-image">
-             
-                </div>
-            </li>
-            <li>
-                <div class="li-content">
-                    <h4>Be cautious of pop-ups or redirects that ask for login credentials or personal information.</h4>
-                    <div class="example">Example: After clicking a link, a pop-up window appears asking for your username and password or redirects you to a different, suspicious website.</div>
-                </div>
-                <div class="li-image">
-                    <img src="bp8.png" alt="Example Image 8" width="300">
+                    <img src="https://i.imgur.com/ygY845W.png" alt="Example Image 8" width="300">
                 </div>
             </li>
         </ul>
