--- a/westernitdepartmentreset.html
+++ b/westernitdepartmentreset.html
@@ -101,10 +101,10 @@
 </head>
 <body>
     <header>
-        &lt;h1&gt;Western Express Phishing Training&lt;/h1&gt;
-        &lt;div class="logo"&gt;
-            &lt;img src="https://i.imgur.com/c9e5TKX.png" alt="Western Express Logo" width="200"&gt;
-        &lt;/div&gt;
+        <h1>Western Express Phishing Training</h1>
+        <div class="logo">
+            <img src="https://i.imgur.com/ImfCE9F.png" alt="Western Express Logo" width="200">
+        </div>
     </header>
     <div class="content">
         <h2>Hello!</h2>
