--- a/workdaypasswordreset.html
+++ b/workdaypasswordreset.html
@@ -103,7 +103,7 @@
     <header>
         <h1>Western Express Phishing Training</h1>
         <div class="logo">
-            <img src="https://i.imgur.com/e0ZW4RM.png" alt="Western Express Logo" width="200">
+            <img src="westernlogo.png" alt="Western Express Logo" width="200">
         </div>
     </header>
     <div class="content">
@@ -111,7 +111,7 @@
         <p>Records indicate that you were recently compromised from our in-house phishing training. But do not worry! This training will help you find ways to protect both your own personal information and Western Express itself! <b1>The image directly below shows the phishing email you fell for: </b1> </p>
     </div>
     <div class="additional-image">
-        <img src="https://i.imgur.com/iIAzcpB.png" alt="Additional Training Image" width="650">
+        <img src="https://i.imgur.com/e0ZW4RM.png" alt="Updated Image" width="650">
     </div>
     <div class="additional-content">
         <h3>How to Determine if an Email or Website is a Phishing Attempt</h3>
