--- a/workdaypasswordreset.html
+++ b/workdaypasswordreset.html
@@ -103,7 +103,7 @@
     <header>
         <h1>Western Express Phishing Training</h1>
         <div class="logo">
-            <img src="westernlogo.png" alt="Western Express Logo" width="200">
+            <blockquote class="imgur-embed-pub" lang="en" data-id="rIlCwqd"><a href="https://imgur.com/rIlCwqd">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         </div>
     </header>
     <div class="content">
