--- a/workdaypasswordreset.html
+++ b/workdaypasswordreset.html
@@ -103,15 +103,15 @@
     <header>
         <h1>Western Express Phishing Training</h1>
         <div class="logo">
-            <blockquote class="imgur-embed-pub" lang="en" data-id="rIlCwqd"><a href="https://imgur.com/rIlCwqd">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+            <img src="https://i.imgur.com/ImfCE9F.png" alt="Western Express Logo" width="200">
         </div>
     </header>
     <div class="content">
         <h2>Hello!</h2>
-        <p>Records indicate that you were recently compromised from our in-house phishing training. But do not worry! This training will help you find ways to protect both your own personal information and Western Express itself! <b1>The image directly below shows the phishing email you fell for: </b1> </p>
+        <p>Records indicate that you were recently compromised from our in-house phishing training. But do not worry! This training will help you find ways to protect both your own personal information and Western Express itself! <b1>The image directly below shows the phishing email you fell for:</b1> </p>
     </div>
     <div class="additional-image">
-        <img src="https://i.imgur.com/e0ZW4RM.png" alt="Updated Image" width="650">
+        <blockquote class="imgur-embed-pub" lang="en" data-id="mkNr9S0"><a href="https://imgur.com/mkNr9S0">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     </div>
     <div class="additional-content">
         <h3>How to Determine if an Email or Website is a Phishing Attempt</h3>
